--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@angular/common": "17.2.4",
         "@angular/compiler": "17.2.4",
         "@angular/core": "17.2.4",
+        "@angular/fire": "^18.0.1",
         "@angular/forms": "17.2.4",
         "@angular/material": "17.2.2",
         "@angular/material-luxon-adapter": "17.2.2",
